--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,8 @@ DB_CONNECTION=sqlite
 # DB_DATABASE=laravel
 # DB_USERNAME=root
 # DB_PASSWORD=
+# Please update your local absolute path
+DB_DATABASE=/path/to/project/database.sqlite
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
